--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "_dev": "vite",
-    "dev": "nodemon server.js",
+    "dev": "vite",
+    "serve": "nodemon server.js",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "formik": "^2.2.9",
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.22",
     "react": "^18.2.0",
